--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -121,6 +121,14 @@
 	};
 };
 
+&mcspi2 {
+	spi_flash: m25p80@0 {
+		compatible = "w25q80";
+		reg = <0>; /* CS 0 */
+		spi-max-frequency = <2000000>;
+	};
+};
+
 &i2c3 {
 
 	clock-frequency = <400000>;
