--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -490,8 +490,9 @@ config RTC_DRV_RV3029C2
 
 config RTC_DRV_SENSORHUB
 	bool "SensorHub based RTC"
+	depends on MFD_M4SENSORHUB
 	help
-	  If you say yes here you get support for the SensorHub based
+	  If you say yes here you get support for M4 SensorHub based
 	  RTC.
 
 endif # I2C
