--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -62,6 +62,7 @@ obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_stillmode.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_download.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_display.o
 obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_passive.o
+obj-$(CONFIG_MFD_M4SENSORHUB)   += m4sensorhub_als.o
 obj-$(CONFIG_VIB_GPIO)          += vib-gpio.o
 obj-$(CONFIG_C55_CTRL) += c55_ctrl.o
 obj-$(CONFIG_MMI_FACTORY) += mmi-factory.o
