--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -98,9 +98,6 @@
 			<&gpio3 17 2>; /* gpio_c55_int gpio-81*/
 		vddc-supply = <&ldo9_reg>;
 		vddldo-supply = <&ldo3_reg>;
-		pinctrl-names = "off", "on";
-		pinctrl-0 = <&c55_pins_off>;
-		pinctrl-1 = <&c55_pins_on>;
 	};
 
 	vib-gpio {
@@ -492,6 +489,10 @@
 		compatible = "w25q80";
 		reg = <0>; /* CS 0 */
 		spi-max-frequency = <24000000>;
+		gpios = <&gpio3 21 0x2>; /* core_enb gpio-85 GPIOF_DIR_OUT | GPIOF_INIT_HIGH */
+		pinctrl-names = "off", "on";
+		pinctrl-0 = <&spi_flash_pins_off>;
+		pinctrl-1 = <&spi_flash_pins_on>;
 		m25p,fast-read;
 	};
 };
@@ -592,8 +593,9 @@
 		>;
 	};
 
-	c55_pins_off: pinmux_c55_pins_off {
+	spi_flash_pins_on: pinmux_m25p_pins_on {
 		pinctrl-single,pins = <
+			0x0ca 0x004	/* DSS_DATA15, MODE4 | OUTPUT */
 			0x1a6 0x100	/* MCSPI2_CLK, MODE0 | INPUT */
 			0x1a8 0x000	/* MCSPI2_SIMO, MODE0 | OUTPUT */
 			0x1aa 0x100	/* MCSPI2_SOMI, MODE0 | INPUT */
@@ -601,8 +603,9 @@
 		>;
 	};
 
-	c55_pins_on: pinmux_c55_pins_on {
+	spi_flash_pins_off: pinmux_m25p_pins_off {
 		pinctrl-single,pins = <
+			0x0ca 0x107	/* DSS_DATA15, MODE7 (SAFE) | INPUT */
 			0x1a6 0x107	/* MCSPI2_CLK, MODE7 (SAFE) | INPUT */
 			0x1a8 0x107	/* MCSPI2_SIMO, MODE7 (SAFE) | INPUT */
 			0x1aa 0x107	/* MCSPI2_SOMI, MODE7 (SAFE) | INPUT */
