--- a/arch/arm/boot/dts/omap3-minnow.dtsi
+++ b/arch/arm/boot/dts/omap3-minnow.dtsi
@@ -348,6 +348,12 @@
 		interrupts = <12 0>;		/* gpio-140 IRQ */
 		maxim,malicious_supply = "ac";
 		maxim,enable_por_init;
+
+		/* This is the default battery profile attributes used by max17xxxx driver */
+		/* It is used when batt-id isn't defined in /chosen as batt-id.  The       */
+		/* Value is originally used under the assumption that this is an LG battery*/
+		/* Otherwise, the driver will either pick SNN5951A or SNN5950A as defined  */
+		/* Right below it.  */
 		maxim,configuration {
 			/* Required properties */
 			config		= /bits/ 16 <0x6254>;	/* Tex = 0, Ss = Aen = TS = Ten = ETHRM = 1 */
@@ -379,6 +385,72 @@
 			tgain		= /bits/ 16 <0xE71C>;	/* thermistor attribute */
 			toff		= /bits/ 16 <0x251A>;	/* thermistor attribute */
 		};
+
+		/* LG Battery profile */
+		maxim,configuration-SNN5951A {
+			/* Required properties */
+			config		= /bits/ 16 <0x6254>;	/* Tex = 0, Ss = Aen = TS = Ten = ETHRM = 1 */
+			full_soc_thresh	= /bits/ 16 <0x5F00>;	/* app note constant */
+			design_cap	= /bits/ 16 <662>;	/* in 5uVh/Rsns = 0.5 mAh */
+			ichgt_term	= /bits/ 16 <0x0066>;	/* battery attribute */
+			learn_cfg	= /bits/ 16 <0x2606>;	/* app note constant */
+			filter_cfg	= /bits/ 16 <0x87A4>;	/* app note constant */
+			relax_cfg	= /bits/ 16 <0x203B>;	/* Load = 5 mA, dV = 3.7 mV, dT = 6 mins */
+			fullcap		= /bits/ 16 <662>;	/* in 5uVh/Rsns = 0.5 mAh */
+			fullcapnom	= /bits/ 16 <662>;	/* in 5uVh/Rsns = 0.5 mAh */
+			qrtbl00		= /bits/ 16 <0x1B94>;	/* battery attribute */
+			qrtbl10		= /bits/ 16 <0x0E94>;	/* battery attribute */
+			qrtbl20		= /bits/ 16 <0x0594>;	/* battery attribute */
+			qrtbl30		= /bits/ 16 <0x0294>;	/* battery attribute */
+			rcomp0 		= /bits/ 16 <0x0052>;	/* battery attribute */
+			tcompc0		= /bits/ 16 <0x333A>;	/* battery attribute */
+			maxim,cell-char-tbl = /bits/ 16 <	/* battery attribute */
+				0x9cf0 0xa310 0xb180 0xb360 0xb6a0 0xb6e0
+				0xba10 0xbb10 0xbbd0 0xbc10 0xc200 0xc250
+				0xc7c0 0xc820 0xd050 0xd710 0x0140 0x0110
+				0x0210 0x02c0 0x1000 0x0a00 0x06c0 0x31a0
+				0x0af0 0x1170 0x0cb0 0x08d0 0x0aa0 0x0880
+				0x07b0 0x07b0 0x0100 0x0100 0x0100 0x0100
+				0x0100 0x0100 0x0100 0x0100 0x0100 0x0100
+				0x0100 0x0100 0x0100 0x0100 0x0100 0x0100
+			>;
+			/* Optional properties */
+			tgain		= /bits/ 16 <0xE71C>;	/* thermistor attribute */
+			toff		= /bits/ 16 <0x251A>;	/* thermistor attribute */
+		};
+		/* Lishen battery profile */
+		maxim,configuration-SNN5950A {
+			/* Required properties */
+			config          = /bits/ 16 <0x6254>;   /* Tex = 0, TS = Ten = ETHRM = 1,  Aen = 1 */
+			full_soc_thresh = /bits/ 16 <0x5F00>;   /* app note constant */
+			design_cap      = /bits/ 16 <662>;      /* in 5uVh/Rsns = 0.5 mAh */
+			ichgt_term      = /bits/ 16 <0x0066>;   /* battery attribute */
+			learn_cfg       = /bits/ 16 <0x2606>;   /* app note constant */
+			filter_cfg      = /bits/ 16 <0x87A4>;   /* app note constant */
+			relax_cfg       = /bits/ 16 <0x203B>;   /* Load = 5 mA, dV = 3.7 mV, dT = 6 mins */
+			fullcap         = /bits/ 16 <662>;      /* in 5uVh/Rsns = 0.5 mAh */
+			fullcapnom      = /bits/ 16 <662>;      /* in 5uVh/Rsns = 0.5 mAh */
+			qrtbl00         = /bits/ 16 <0x069A>;   /* battery attribute */
+			qrtbl10         = /bits/ 16 <0x0398>;   /* battery attribute */
+			qrtbl20         = /bits/ 16 <0x0298>;   /* battery attribute */
+			qrtbl30         = /bits/ 16 <0x0296>;   /* battery attribute */
+			rcomp0          = /bits/ 16 <0x003C>;   /* battery attribute */
+			tcompc0         = /bits/ 16 <0x231C>;   /* battery attribute */
+			maxim,cell-char-tbl = /bits/ 16 <       /* battery attribute */
+				0x9f80 0xa030 0xb220 0xb440 0xb890 0xb910
+				0xba10 0xba40 0xbf10 0xbf60 0xc2d0 0xc5e0
+				0xc640 0xcc90 0xd520 0xd780 0x05d0 0x00e0
+				0x01e0 0x03a0 0x08e0 0x1000 0x4000 0x1670
+				0x23d0 0x0df0 0x0a70 0x0aa0 0x06f0 0x0790
+				0x06b0 0x06b0 0x0100 0x0100 0x0100 0x0100
+				0x0100 0x0100 0x0100 0x0100 0x0100 0x0100
+				0x0100 0x0100 0x0100 0x0100 0x0100 0x0100
+			>;
+			/* Optional properties */
+			tgain           = /bits/ 16 <0xE71C>;   /* thermistor attribute */
+			toff            = /bits/ 16 <0x251A>;   /* thermistor attribute */
+		};
+
 		maxim,temp-conv {
 			start	= /bits/ 16 <(-20)>;	/* in degrees C */
 			result	= /bits/ 16 <
